--- a/4day/4day_정리.ipynb
+++ b/4day/4day_정리.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7654ce33",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "0bc3656f",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "df78e2d9",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sleep\\AppData\\Local\\Temp/ipykernel_6408/548304.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.dropna will be keyword-only\n",
+      "C:\\Users\\sleep\\AppData\\Local\\Temp/ipykernel_11796/548304.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.dropna will be keyword-only\n",
       "  df_drop_allrow = df.dropna(0)\n"
      ]
     },
@@ -346,7 +346,7 @@
        "[358 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "7e5e0dfc",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "[358 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "c2078444",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1746,7 @@
        "(array([  2,  19,  33, 117, 180, 218, 246, 304, 305, 306], dtype=int64),)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "ba79e549",
    "metadata": {},
    "outputs": [],
@@ -1787,12 +1787,12 @@
     "    upper_bound = q3 + (iqr *1.5)\n",
     "    lower_bound = q1 - (iqr*1.5)\n",
     "\n",
-    "    return np.where((data > 61.5) | (data < 1.5))"
+    "    return np.where((data > upper_bound) | (data < lower_bound))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "ea6691c3",
    "metadata": {},
    "outputs": [
@@ -1811,7 +1811,7 @@
        "(array([  2,  19,  33, 117, 180, 218, 246, 304, 305, 306], dtype=int64),)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1857,9 +1857,9 @@
    "source": [
     "#### 확인\n",
     "\n",
-    "##### df_drop_allrow.loc[age_outlier_index]\n",
-    "##### age_outlier_index.index\n",
-    "##### df_drop_allrow.index"
+    "##### df_drop_allrow.loc[age_outlier_index] 행의 우치만 확인해서 조회\n",
+    "##### age_outlier_index.index 인덱스 확인\n",
+    "##### df_drop_allrow.index 인덱스 확인2"
    ]
   },
   {
@@ -2262,10 +2262,17 @@
     "age_non_outlier_index = []\n",
     "\n",
     "#이상치 없는 정상 인덱스만 추출\n",
+    "#전체 데이터 프레임 인덱스 번호 읽어 들이기\n",
+    "\n",
     "for idx in df_drop_allrow.index : \n",
+    "    \n",
+    "    #이상치 인덱스가 아닌 정상 인덱스만 추출\n",
     "    if idx not in age_outlier_index[0] : #0번째 컬럼: 인덱스칸 지정\n",
+    "        \n",
+    "        #정상 인덱스 값을 리스트에 추가\n",
     "        age_non_outlier_index.append(idx)\n",
     "\n",
+    "        \n",
     "#append() 리스트 추가\n",
     "\n",
     "age_non_outlier_index"
