--- a/02관광데이터 분석/01_Date+preprocessing.ipynb
+++ b/02관광데이터 분석/01_Date+preprocessing.ipynb
@@ -17,16 +17,193 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b2a821c9",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d670c39",
    "metadata": {},
+   "outputs": [],
    "source": [
     "#kto_201901.xlsx파일 불러오기\n",
     "# - 컬럼명과 컬럼에 대한 데이터만 불러오기\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cddce7bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국적</th>\n",
+       "      <th>관광</th>\n",
+       "      <th>상용</th>\n",
+       "      <th>공용</th>\n",
+       "      <th>유학/연수</th>\n",
+       "      <th>기타</th>\n",
+       "      <th>계</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>아시아주</td>\n",
+       "      <td>765082</td>\n",
+       "      <td>10837</td>\n",
+       "      <td>1423</td>\n",
+       "      <td>14087</td>\n",
+       "      <td>125521</td>\n",
+       "      <td>916950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>일본</td>\n",
+       "      <td>198805</td>\n",
+       "      <td>2233</td>\n",
+       "      <td>127</td>\n",
+       "      <td>785</td>\n",
+       "      <td>4576</td>\n",
+       "      <td>206526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>대만</td>\n",
+       "      <td>86393</td>\n",
+       "      <td>74</td>\n",
+       "      <td>22</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1285</td>\n",
+       "      <td>87954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>홍콩</td>\n",
+       "      <td>34653</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1092</td>\n",
+       "      <td>35896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>마카오</td>\n",
+       "      <td>2506</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>아프리카 기타</td>\n",
+       "      <td>768</td>\n",
+       "      <td>718</td>\n",
+       "      <td>90</td>\n",
+       "      <td>206</td>\n",
+       "      <td>908</td>\n",
+       "      <td>2690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>기타대륙</td>\n",
+       "      <td>33</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>국적미상</td>\n",
+       "      <td>33</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>교포소계</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15526</td>\n",
+       "      <td>15526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>교포</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15526</td>\n",
+       "      <td>15526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>67 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         국적      관광     상용    공용  유학/연수      기타       계\n",
+       "0      아시아주  765082  10837  1423  14087  125521  916950\n",
+       "1        일본  198805   2233   127    785    4576  206526\n",
+       "2        대만   86393     74    22    180    1285   87954\n",
+       "3        홍콩   34653     59     2     90    1092   35896\n",
+       "4       마카오    2506      2     0     17      45    2570\n",
+       "..      ...     ...    ...   ...    ...     ...     ...\n",
+       "62  아프리카 기타     768    718    90    206     908    2690\n",
+       "63     기타대륙      33      4     0      1      16      54\n",
+       "64     국적미상      33      4     0      1      16      54\n",
+       "65     교포소계       0      0     0      0   15526   15526\n",
+       "66       교포       0      0     0      0   15526   15526\n",
+       "\n",
+       "[67 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#자동화\n",
     "kto_201901 = pd.read_excel(\"./files/kto_201901.xlsx\"\n",
     "                           , header = 1 #컬럼위치 지정\n",
@@ -3130,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "id": "686eccfb",
    "metadata": {},
    "outputs": [
@@ -3358,7 +3535,7 @@
        "[6960 rows x 11 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
