--- a/06 통계분석/통계분석.ipynb
+++ b/06 통계분석/통계분석.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "source": [
     "해석 1\n",
-    "statistic = 검정통계랭 = 정확도\n",
+    "statistic = 검정통계량 = 정확도 <br>\n",
     "pvalue(p-value) = 유의수준 = 오차\n",
     "\n",
     "정확도 + 오차 =1\n",
